@startuml TP2

title Diagrama De Clases De Pregunta con comportamiento con Puntaje Parcial Cajú

hide circle
skinparam classAttributeIconSize 0
skinparam roundcorner 25
skinparam sequenceArrowThickness 2
skinparam classFontSize 20

skinparam class {
BackgroundColor FloralWhite
ArrowColor DimGray
BorderColor DimGray
}

abstract class Pregunta{
        # tipoPregunta: String
        # opcionesCorrectas: Collection<String>
        # todasLasOpciones: Collection<String>
        # textoPregunta: String
        + compararRespuestas(Collection<String>): Int
        + activarMultiplicador()
        + activarExclusividad()
}

class PreguntaMCConPuntajeParcial{
        + PreguntaMCConPuntajeParcial(String, String, String[], Collection<String>)
        + compararRespuestas(Collection<String>): Int
}

interface Comportamiento{
        + compararRespuestas(Collection<String>, Collection<String>): Int
}

class ComportamientoConPuntajeParcial{
        + compararRespuestas(Collection<String>, Collection<String>): Int
}

PreguntaMCConPuntajeParcial -up-|> Pregunta

ComportamientoConPuntajeParcial ..|> Comportamiento

PreguntaMCConPuntajeParcial --> ComportamientoConPuntajeParcial



@enduml